fix text align and title

--- a/src/components/experience/experience.module.css
+++ b/src/components/experience/experience.module.css
@@ -13,7 +13,6 @@
   letter-spacing: 1.75px;
   text-transform: uppercase;
   margin-bottom: 8%;
-  text-align: center;
 }
 
 .skills {
